--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,1 +1,5 @@
 <h1>Welcome to the IAFE Contest Page!</h1>
+
+<p>Each year, the IAFE conducts contests for its fair members, which recognize and reward excellence. All contests are judged by IAFE member representatives and professionals from respective fields.</p>
+
+<p>Rules and regulations for the contest are released during the summer. For a copy of this year's rules and a list of the previous year's winners, please click on the "Contest Rules" page.</p>
