--- a/app/views/organization_details/_form.html.erb
+++ b/app/views/organization_details/_form.html.erb
@@ -13,8 +13,9 @@
 
   <div class="field">
     <%= f.label :organization_id %><br>
-	<% if params[:action] == 'new' %>
-	  <%= collection_select(:organization_detail, :organization_id, current_user.organizations.where({fair: true}), :id, :name_and_state) %>
+	<% if params[:action] == 'new' || params[:action] == 'create' %>
+	  <%= collection_select(:organization_detail, :organization_id, current_user.organizations.where({fair: true}), :id, :name_and_state,  
+	  include_blank: true) %>
 	<% else %>
 	  <%= f.hidden_field :organization_id, value: :organization_id %><%= @organization_detail.organization.name %>
 	<% end %>
@@ -29,6 +30,7 @@
   </div>
   <div class="field">
     <%= f.label :total_attendance, "Total Attendance (Free & Paid Combined)" %><br>
+    Please enter in a whole number with no commas.<br>
     <%= f.text_field :total_attendance %>
   </div>
   <div class="actions">
