--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,7 +26,7 @@
         <td><%= user.suffix %></td>
         <td><%= user.email %></td>
         <td><%= user.phone %></td>
-        <td><%= user.password_digest %></td>
+        <td><%= user.encrypted_password %></td>
         <td><%= user.admin %></td>
         <td><%= user.judge %></td>
         <td><%= user.enabled %></td>
