--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,13 +30,15 @@
 <li style="display:inline; padding-left:20px;"><%= link_to "Contest Rules", '#' %></li>
 <li style="display:inline; padding-left:20px;"><%= link_to "Contact Us", '#' %></li>
 
-<% if signed_in? %>
+<% if user_signed_in? %>
 <li style="display:inline; padding-left:20px;"><%= link_to "Account Management", '#' %></li>
 <li style="display:inline; padding-left:20px;"><%= link_to "Your Submissions", '#' %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Sign out", signout_path, :method => :delete %></li>
+<li style="display:inline; padding-left:20px;"><%= link_to "Change Password", edit_user_registration_path %></li>
+<li style="display:inline; padding-left:20px;"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+
 <% else %>
-<li style="display:inline; padding-left:20px;"><%= link_to "Create an Account", signup_path %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Sign In", signin_path %></li>
+<li style="display:inline; padding-left:20px;"><%= link_to "Create an Account", new_user_registration_path %></li>
+<li style="display:inline; padding-left:20px;"><%= link_to "Sign In", new_user_session_path %></li>
 <% end %>
 </ul>
 <%= yield %>
