--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,6 @@
 @import "scaffolds";
+@import "select2";
+@import "select2-bootstrap";
 
  /* add required field asterisk */
 label.required:after {
