--- a/app/views/user_organizations/_form.html.erb
+++ b/app/views/user_organizations/_form.html.erb
@@ -1,3 +1,7 @@
+<script>$(document).ready(function(){
+  $('select').select2();
+});</script>
+
 <%= form_for(@user_organization) do |f| %>
   <% if @user_organization.errors.any? %>
     <div id="error_explanation">
