--- a/app/views/judges/_form.html.erb
+++ b/app/views/judges/_form.html.erb
@@ -1,3 +1,7 @@
+<script>$(document).ready(function(){
+  $('select').select2();
+});</script>
+
 <%= form_for(@judge) do |f| %>
   <% if @judge.errors.any? %>
     <div id="error_explanation">
