--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,46 +7,38 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<% if signed_in? %><p>Welcome back, <%= current_user.first_name %> <%= current_user.last_name %></p><% end %>
-<ul>
-<li style="display:inline; padding-left:20px;"><%= link_to "Users", users_path %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Organizations", organizations_path %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "User Organizations", user_organizations_path %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Organization Details", organization_details_path %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Awards", awards_path %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Divisions", divisions_path %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Categories", categories_path %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Score Items", score_items_path %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Submissions", submissions_path %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Submission Details", submission_details_path %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Judges", judges_path %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Scores", scores_path %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Score Details", score_details_path %></li>
-</ul>
+	
+<header class="navbar navbar-fixed-top navbar-inverse">
+	<div class="navbar-inner">
+  		<div class="container">
+			<nav>
+				<ul class="nav pull-left">
+					<li><%= link_to "Home", root_path %></li>
+					<li><%= link_to "About", '#' %></li>
+					<li><%= link_to "Contest Rules", '#' %></li>
+					<li><%= link_to "Contact Us", '#' %></li>
+				</ul>
+				<ul class="nav pull-right">
+					<% if signed_in? %>
+						<li><%= link_to "My Account", '#' %></li>
+						<li><%= link_to "My Submissions", '#' %></li>
+						<li><%= link_to "Change Password", edit_user_registration_path %></li>
+						<% if current_user.admin? == true %>
+							<li><%= link_to "Admin Dashboard", admin_root_path %></li>
+						<% end %>
+						<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+					<% else %>
+						<li><%= link_to "Create an Account", new_user_registration_path %></li>
+						<li><%= link_to "Sign In", new_user_session_path %></li>
+					<% end %>
+				</ul>
+			</nav>
+		</div>
+	</div>
+</header>
 
-<ul>
-<li style="display:inline; padding-left:20px;"><%= link_to "Home", root_path %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "About", '#' %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Contest Rules", '#' %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Contact Us", '#' %></li>
+<% if signed_in? %>Welcome back, <%= current_user.first_name %> <%= current_user.last_name %><% end %>
 
-<% if user_signed_in? %>
-<li style="display:inline; padding-left:20px;"><%= link_to "Account Management", '#' %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Your Submissions", '#' %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Change Password", edit_user_registration_path %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
-
-  <% if current_user.admin? == true %>
-
-  <li style="display:inline; padding-left:20px;"><%= link_to "Admin Dashboard", admin_root_path %></li>
-
-  <% end %>
-
-<% else %>
-<li style="display:inline; padding-left:20px;"><%= link_to "Create an Account", new_user_registration_path %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Sign In", new_user_session_path %></li>
-<% end %>
-</ul>
 <%= yield %>
 
 </body>
