--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,38 +8,57 @@
 </head>
 <body>
 	
-<header class="navbar navbar-fixed-top navbar-inverse">
-	<div class="navbar-inner">
-  		<div class="container">
-			<nav>
-				<ul class="nav pull-left">
-					<li><%= link_to "Home", root_path %></li>
-					<li><%= link_to "About", '#' %></li>
-					<li><%= link_to "Contest Rules", '#' %></li>
-					<li><%= link_to "Contact Us", '#' %></li>
-				</ul>
-				<ul class="nav pull-right">
-					<% if signed_in? %>
-						<li><%= link_to "My Account", '#' %></li>
-						<li><%= link_to "My Submissions", '#' %></li>
-						<li><%= link_to "Change Password", edit_user_registration_path %></li>
-						<% if current_user.admin? == true %>
-							<li><%= link_to "Admin Dashboard", admin_root_path %></li>
-						<% end %>
-						<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
-					<% else %>
-						<li><%= link_to "Create an Account", new_user_registration_path %></li>
-						<li><%= link_to "Sign In", new_user_session_path %></li>
-					<% end %>
-				</ul>
-			</nav>
-		</div>
-	</div>
-</header>
+<nav class="navbar navbar-default" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">IAFE Contest</a>
+    </div>
 
-<% if signed_in? %>Welcome back, <%= current_user.first_name %> <%= current_user.last_name %><% end %>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "About", about_path %></li>
+        <li><%= link_to "Contest Rules", rules_path %></li>
+        <li><%= link_to "Contact Us", contact_path %></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <% if signed_in? %>
+          <li><%= link_to "My Submissions", '#' %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account<b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Account Profile", '#' %></li>
+              <li><%= link_to "Change Password", edit_user_registration_path %></li>
+              <% if current_user.admin? == true %>
+                <li class="divider"></li>
+                <li><%= link_to "Admin Dashboard", admin_root_path %></li>
+              <% end %>
+              <li class="divider"></li>
+              <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to "Create an Account", new_user_registration_path %></li>
+          <li><%= link_to "Sign In", new_user_session_path %></li>
+        <% end %>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 
 <%= yield %>
 
+<footer>
+	<hr/>
+	<p class="center">Copyright <a href="http://www.fairsandexpos.com" target="_blank">International Association of Fairs and Expositions</a>. All rights reserved.</p>
+</footer>
 </body>
 </html>
