--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<div class="container">
+	<h1>About Contest and the IAFE</h1>
+	<p><span class="special">The International Association of Fairs and Expositions (IAFE)</span> is a voluntary, not-for-profit corporation, serving state, provincial, regional, and county agricultural fairs, shows, exhibitions, and expositions. Its associate members include state and provincial associations of fairs, non-agricultural expositions and festivals, associations, corporations, and individuals engaged in providing products and services to its members, all of whom are interested in the improvement of fairs and allied fields. More information about the IAFE and membership can be found at <a href="https://www.fairsandexpos.com" target="_blank">www.fairsandexpos.com</a>.</p>
+</div>
