--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,20 @@
-<h1>StaticPages#contact</h1>
-<p>Find me in app/views/static_pages/contact.html.erb</p>
+<div class="container">
+	<h1>Contact Us</h1>
+	<p>Physical contest entries must be mailed to the following address:</p>
+	<p>IAFE<br/>
+	3043 East Cairo St.<br/>
+	Springfield, MO 65802</p>
+	<p>Have questions about the annual contest program? Please call our office at <span class="special">417.862.5771</span>, or toll-free <span class="special">800.516.0313</span>.</p>
+	<p>Contest-related questions may also be sent to <script type="text/javascript">
+//<![CDATA[
+<!--
+var x="function f(x){var i,o=\"\",ol=x.length,l=ol;while(x.charCodeAt(l/13)!" +
+"=48){try{x+=x;l+=l;}catch(e){}}for(i=l-1;i>=0;i--){o+=x.charAt(i);}return o" +
+".substr(0,ol);}f(\")3,\\\"HBJYMP410\\\\CW700\\\\600\\\\310\\\\I520\\\\n\\\\" +
+"420\\\\330\\\\700\\\\500\\\\610\\\\>-/5:<130\\\\,$3!:<1or320\\\\\\\"\\\\$-&" +
+"710\\\\k420\\\\z#)0*6abcSR_520\\\\IVHOSQZRACYNHmXXO]FHE730\\\\KWNHAr<A!}771" +
+"\\\\kp7w)6;|}u{g771\\\\{%~gmjsfkg\\\"(f};o nruter};))++y(^)i(tAedoCrahc.x(e" +
+"doCrahCmorf.gnirtS=+o;721=%y{)++i;l<i;0=i(rof;htgnel.x=l,\\\"\\\"=o,i rav{)" +
+"y,x(f noitcnuf\")";while(x=eval(x));//-->//]]></script></p>
+	<p>More information about the IAFE and membership can be found at <a href="https://www.fairsandexpos.com" target="_blank">www.fairsandexpos.com</a>.</p>
+</div>
