--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -5,7 +5,9 @@
   
   .logo {
     float: left;
-    padding-right: 50px;
+    margin-right: 50px;
     padding-bottom: 10px;
+    width: 100%;
+    max-width: 350px;
   }
 }
