--- a/app/assets/stylesheets/text.css.scss
+++ b/app/assets/stylesheets/text.css.scss
@@ -17,6 +17,12 @@ h2 {
   font-size: 32px;
 }
 
+h3 {
+  color: $theme-color1;
+  font-family: $h2-font;
+  font-size: 24px;
+}
+
 p {
   
   a:link, a:hover, a:active, a:visited {
@@ -37,4 +43,9 @@ p {
 
 .italic {
   font-style: italic;
+}
+
+.special {
+  font-weight: bold;
+  color: $theme-color4;
 }
