--- a/app/views/awards/show.html.erb
+++ b/app/views/awards/show.html.erb
@@ -1,34 +1,38 @@
-<p id="notice"><%= notice %></p>
+<script>jQuery(function(){
+	jQuery(".idDiv").hide();
+	jQuery('#div0').show();
+    jQuery('.showSingle').click(function(){
+    	jQuery('.idDiv').hide();
+        jQuery('#div'+$(this).attr('id')).show();
+    });
+});</script>
 
-<p>
-  <strong>Name:</strong>
-  <%= @award.name %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @award.description %>
-</p>
-
-<p>
-  <strong>Rules:</strong>
-  <%= @award.rules %>
-</p>
-
-<p>
-  <strong>Sponsor:</strong>
-  <%= @award.sponsor %>
-</p>
-
-<p>
-  <strong>Sponsor logo:</strong>
-  <%= @award.sponsor_logo %>
-</p>
-
-<p>
-  <strong>Enabled:</strong>
-  <%= @award.enabled %>
-</p>
-
-<%= link_to 'Edit', edit_award_path(@award) %> |
-<%= link_to 'Back', awards_path %>
+<div class="container">
+	<p id="notice"><%= notice %></p>
+	<h1><%= @award.name %></h1>
+	<div class="row">
+		<div class="col-md-4">
+			<p><a href="#" class="showSingle" id="0">Award Overview</a></p>
+			<% @award.categories.sort_by_category_codes(Category.all).each do |category| %>
+				<% if category.award_id == @award.id %>
+					<p><a href="#" class="showSingle" id="<%= category.id %>"><%= category.code %>: <%= category.name %></a></p>
+				<% end %>
+			<% end %>
+		</div>
+		<div class="col-md-8">
+			<div id="div0" class="idDiv">
+				<% if @award.sponsor != '' %>
+					<%= image_tag @award.sponsor_logo, class: "right" %>
+				<% end %>
+				<p><%= sanitize(@award.description) %></p>
+				<h2>Rules for All Entries in this Section</h2>
+				<p><%= sanitize(@award.rules) %></p>
+			</div>
+			<% @award.categories.sort_by_category_codes(Category.all).each do |category| %>
+				<% if category.award_id == @award.id %>
+					<div id="div<%= category.id %>" class="idDiv"><%= sanitize(category.rules) %></div>
+				<% end %>
+			<% end %>
+		</div>
+	</div>
+</div>
