--- a/app/views/static_pages/instructions.html.erb
+++ b/app/views/static_pages/instructions.html.erb
@@ -17,7 +17,7 @@
 	<div class="row">
 		<div class='col-md-4'>
 			<h3>4. Create a New Submission</h3>
-			<p>The easiest step! Click the "My Submissions" link at the top, where you can view past submissions and create new ones. The site will prevent you from creating a new submission if you have not yet inputted new dates/attendance for the year or if you have already submitted an entry to the category you select.</p>
+			<p>The easiest step! Click the "My Submissions" link at the top, where you can view past submissions and create new ones. The site will prevent you from creating a new submission if you have not yet inputted new dates and attendance for the year, or if you have already submitted an entry to that category (UNLESS it is a category that accepts multiple submissions by the same fair).</p>
 		</div>
 		<div class='col-md-4'>
 			<h3>5. Assign Documents to the Submission</h3>
