--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,6 @@
-<h2>Change your password</h2>
+<div class="container">
+
+<h1>Change Your Password</h1>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -10,7 +12,9 @@
   <div><%= f.label :password_confirmation, "Confirm new password" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %></div><br/>
 
-  <div><%= f.submit "Change my password" %></div>
+  <div><p><%= f.submit "Change my password" %><p></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
