--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,16 @@
-<h2>Forgot your password?</h2>
+<div class="container">
+
+<h1>Forgot Your Password?</h1>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+  <div><p><%= f.label :email %><br/>
+  <%= f.email_field :email, autofocus: true %><p></div>
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
+  <div><p><%= f.submit "Send me reset password instructions" %></p></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
