--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,6 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container">
+
+<h1>Change Your Password</h1>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -19,7 +21,9 @@
   <div><%= f.label :password_confirmation, "Confirm New Password" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %></div><br/>
 
-  <div><%= f.submit "Update" %></div>
+  <div><p><%= f.submit "Update" %></p></div>
 <% end %>
 
-<%= link_to "Back", :back %>
+<p><%= link_to "Back", :back %></p>
+
+</div>
