--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,11 +39,11 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if signed_in? %>
-          <li><%= link_to "My Submissions", '#' %></li>
+          <li><%= link_to "My Submissions", submissions_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account<b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Account Profile", '#' %></li>
+              <li><%= link_to "Account Profile", user_path(current_user.id) %></li>
               <li><%= link_to "Change Password", edit_user_registration_path %></li>
               <% if current_user.admin? == true %>
                 <li class="divider"></li>
