--- a/app/views/organization_details/edit.html.erb
+++ b/app/views/organization_details/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing organization_detail</h1>
+<div class="container">
+
+<h1>Editing Fair Dates/Attendance</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @organization_detail %> |
-<%= link_to 'Back', organization_details_path %>
+</div>
