--- a/app/views/organization_details/new.html.erb
+++ b/app/views/organization_details/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New organization_detail</h1>
+<div class="container">
+
+<h1>New Fair Dates/Attendance</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', organization_details_path %>
+</div>
