--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing organization</h1>
+<div class="container">
+
+<h1>Edit Organization</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @organization %> |
-<%= link_to 'Back', organizations_path %>
+<p><%= link_to 'Show', @organization %> | <%= link_to 'Back', organizations_path %></p>
+
+</div>
