--- a/app/views/user_organizations/edit.html.erb
+++ b/app/views/user_organizations/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing user_organization</h1>
+<div class='container'>
+	<h1>Change Your Linked Organization</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @user_organization %> |
-<%= link_to 'Back', user_organizations_path %>
+<p><%= link_to 'Show', @user_organization %> | <%= link_to 'Back', user_organizations_path %></p>
+
+</div>
