--- a/app/views/user_organizations/new.html.erb
+++ b/app/views/user_organizations/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New user_organization</h1>
+<div class="container">
+	<h1>Add a New Organization to Your Account</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', user_organizations_path %>
+<p><%= link_to 'Back', user_organizations_path %></p>
+
+</div>
