--- a/app/views/user_organizations/show.html.erb
+++ b/app/views/user_organizations/show.html.erb
@@ -1,13 +1,13 @@
-<p id="notice"><%= notice %></p>
+<div class="container"><p id="notice"><%= notice %></p>
 
 <p>
   <strong>User:</strong>
-  <%= @user_organization.user_id %>
+  <%= @user_organization.user.first_name %> <%= @user_organization.user.last_name %>
 </p>
 
 <p>
   <strong>Organization:</strong>
-  <%= @user_organization.organization_id %>
+  <%= @user_organization.organization.name %>
 </p>
 
 <p>
@@ -15,5 +15,6 @@
   <%= @user_organization.primary %>
 </p>
 
-<%= link_to 'Edit', edit_user_organization_path(@user_organization) %> |
-<%= link_to 'Back', user_organizations_path %>
+<p><%= link_to 'Edit', edit_user_organization_path(@user_organization) %> | <%= link_to 'Add Another Organization to Your Account', new_user_organization_path %></p>
+
+</div>
