--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,49 +1,40 @@
+<div class="container">
+	
+	<h1>Account Profile</h1>
+
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>First name:</strong>
-  <%= @user.first_name %>
-</p>
+<p><%= link_to 'Edit User Profile Information', edit_user_path(@user), class: "btn btn-default", role: "button" %> <%= link_to "Change Password", edit_user_registration_path, class: "btn btn-default", role: "button" %></p>
+<p><strong>First name:</strong> <%= @user.first_name %></p>
+<p><strong>Last name:</strong> <%= @user.last_name %></p>
+<p><strong>Suffix:</strong> <%= @user.suffix %></p>
+<p><strong>Email:</strong> <%= @user.email %></p>
+<p><strong>Phone:</strong> <%= @user.phone %></p>
 
-<p>
-  <strong>Last name:</strong>
-  <%= @user.last_name %>
-</p>
+<h2>Your Organizations</h2>
 
-<p>
-  <strong>Suffix:</strong>
-  <%= @user.suffix %>
-</p>
+<p><%= link_to "Add An Organization".html_safe, new_user_organization_path, class: "btn btn-default", role: "button" %> <%= link_to "Update Fair Dates/Attendance".html_safe, new_organization_detail_path, class: "btn btn-default", role: "button" %></p>
 
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
+<% @user.user_organizations.in_groups_of(3, false).each do |group| %>
+  <div class="row">
+    <% group.each do |user_organization| %>
+      <div class="col-md-4">
+        <p><strong>Name:</strong> <%= user_organization.organization.name %></p>
+        <p><strong>Primary Contact:</strong> <%= user_organization.organization.primary_contact %></p>
+        <p><strong>Address Line 1:</strong> <%= user_organization.organization.address_line_1 %></p>
+        <p><strong>Address Line 2:</strong> <%= user_organization.organization.address_line_2 %></p>
+        <p><strong>City:</strong> <%= user_organization.organization.city %></p>
+        <p><strong>State or Province/Territory:</strong> <%= user_organization.organization.state_province %></p>
+        <p><strong>Country:</strong> <%= user_organization.organization.country %></p>
+        <p><strong>Zip Code:</strong> <%= user_organization.organization.zip_code %></p>
+        <p><strong>Phone:</strong> <%= user_organization.organization.phone %></p>
+        <p><strong>Is This a Fair?</strong> <%= user_organization.organization.fair? %></p>
+        <p><strong>Is This Your Primary Org?</strong> <%= user_organization.primary? %></p>
+        <p><%= link_to "Edit Organization Information".html_safe, 
+        edit_organization_path(user_organization.organization), class: "btn btn-default", role: "button" %></p>
+      </div>
+    <% end %>
+  </div>
+<% end %>
 
-<p>
-  <strong>Phone:</strong>
-  <%= @user.phone %>
-</p>
-
-<p>
-  <strong>Password digest:</strong>
-  <%= @user.password_digest %>
-</p>
-
-<p>
-  <strong>Admin:</strong>
-  <%= @user.admin %>
-</p>
-
-<p>
-  <strong>Judge:</strong>
-  <%= @user.judge %>
-</p>
-
-<p>
-  <strong>Enabled:</strong>
-  <%= @user.enabled %>
-</p>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+</div>
