--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -10,4 +10,12 @@
     width: 100%;
     max-width: 350px;
   }
+  
+  .social {
+    padding-right: 10px;
+  }
+  
+  .icons {
+    width: 150px;
+  }
 }
