--- a/app/assets/stylesheets/text.css.scss
+++ b/app/assets/stylesheets/text.css.scss
@@ -49,3 +49,13 @@ p {
   font-weight: bold;
   color: $theme-color1;
 }
+
+.important {
+  font-weight: bold;
+  color: #FF0000;
+}
+
+#notice {
+  font-weight: bold;
+  color: $theme-color3;
+}
