--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,8 @@
         <img src="/images/template/logo.png" class="logo"/>
         <p>Each year, the IAFE conducts contests for its fair members, which recognize and reward excellence. All contests are judged by IAFE member representatives and professionals from respective fields.</p>
         <p><a class="btn btn-primary btn-lg" role="button">Learn More &raquo;</a>
-        	<a class="btn btn-primary btn-lg" role="button">Create an Account &raquo;</a></p>
+        	<a class="btn btn-primary btn-lg" role="button">Create an Account &raquo;</a>
+        	<span class="icons"><a href="https://www.facebook.com/pages/IAFE-The-Network/87203559642?ref=nf" target="_blank"><img src="/images/template/facebook.png" class="social"/></a><a href="https://twitter.com/iafe" target="_blank"><img src="/images/template/twitter.png" class="social"/></a><a href="https://www.youtube.com/user/IAFEtheNetwork" target="_blank"><img src="/images/template/youtube.png" class="social"/></a></p></span>
         <p>The deadline for the <%= Time.now.year %> contest is October 3.</p>
       </div>
     </div>
