--- a/app/views/submissions/edit.html.erb
+++ b/app/views/submissions/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing submission</h1>
+<div class="container">
+
+<h1>Editing Submission</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @submission %> |
-<%= link_to 'Back', submissions_path %>
+<p><%= link_to 'Show', @submission %> | <%= link_to 'Back to My Submissions', submissions_path %></p>
+
+</div>
