--- a/app/views/submission_details/edit.html.erb
+++ b/app/views/submission_details/edit.html.erb
@@ -1,5 +1,7 @@
-<h1>Editing submission_detail</h1>
+<div class="container">
+
+<h1>Editing Submission Document</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @submission_detail %>
+</div>
