--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -2,63 +2,30 @@
 	
 <h1>My Submissions</h1>
 
-<%= link_to 'Create a New Submission', new_submission_path, class: "btn btn-default", role: "button" %> <%= link_to 'Add Fair Dates/Attendance', new_organization_detail_path, class: "btn btn-default", role: "button" %>
+<p><%= link_to 'Create a New Submission', new_submission_path, class: "btn btn-default", role: "button" %></p>
 
 <% current_user.user_organizations.each do |user_organization| %>
-	<% if user_organization.organization.organization_details.order('created_at DESC').first.created_at.year == Time.now.year %>
-		<p><%= user_organization.organization.name %> has updated its fair dates/attendance for the <%= Time.now.year %> contest. Its dates are <%= user_organization.organization.organization_details.order('created_at DESC').first.fair_start_date %> - <%= user_organization.organization.organization_details.order('created_at DESC').first.fair_end_date %> and its attendance is <%= user_organization.organization.organization_details.order('created_at DESC').first.total_attendance %>, putting it under <%= user_organization.organization.submission_division %> for this year's contest.</p>
-	 <% else %> Nothing entered!<% end %>
+  <% if user_organization.organization.fair == true %>
+	<% if user_organization.organization.submission_division != '' %>
+		<p class="bold"><span class="italic"><%= user_organization.organization.name %></span> has updated its fair dates/attendance for the <%= Time.now.year %> contest. Its dates are <%= user_organization.organization.organization_details.order('created_at DESC').first.fair_start_date.to_formatted_s(:long)  %> - <%= user_organization.organization.organization_details.order('created_at DESC').first.fair_end_date.to_formatted_s(:long)  %> and its attendance is <%= user_organization.organization.organization_details.order('created_at DESC').first.total_attendance %>, putting it under Division <%= user_organization.organization.submission_division %> for this year's contest. <%= link_to 'Edit these dates/attendance', edit_organization_detail_path(user_organization.organization.organization_details.order('created_at DESC').first) %></p>
+	 <% else %><p class="important">Total attendance/fair dates for the <%= user_organization.organization.name %> has not been inputted for the <%= Time.now.year %> contest. <%= link_to 'Add fair dates/attendance now.', new_organization_detail_path %></p><% end %>
+  <% end %>
 <% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Award</th>
-      <th>Category</th>
-      <th>User</th>
-      <th>Organization</th>
-      <th>Division</th>
-      <th>Contest year</th>
-      <th>Notes</th>
-      <th>Status</th>
-      <th>Physical version received?</th>
-      <th>Digital version received?</th>
-      <th>Disqualify?</th>
-      <th>Final Score</th>
-      <th>Winner?</th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @submissions.each do |submission| %>
-      <tr>
-      	<td><%= submission.category.award.name %></td>
-        <td><%= submission.category.code %> <%= submission.category.name %></td>
-        <td><%= submission.user.first_name %> <%= submission.user.last_name %></td>
-        <td><%= submission.organization.name %></td>
-        <td><%= submission.division.name %></td>
-        <td><%= submission.contest_year %></td>
-        <td><%= sanitize(submission.notes) %></td>
-        <td><%= submission.status %></td>
-        <td><%= submission.physical_version_received %></td>
-        <td><%= submission.digital_version_received %></td>
-        <td><%= submission.disqualify %></td>
-        <td><%= submission.calculate_final_score %></td>
-        <td><%= submission.winner? %></td>
-        <td><%= link_to 'Show', submission %></td>
-        <td><%= link_to 'Edit', edit_submission_path(submission) %></td>
-        <td><%= link_to 'Destroy', submission, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <td><%= link_to 'Add Digital File', new_submission_submission_detail_path(submission) %></td>
-        <td><%= link_to 'Score Entry', new_submission_score_path(submission) %></td>
-      </tr>
+<% current_user.submissions.each do |submission| %>
+    <h2><%= submission.contest_year %>: <%= submission.organization.name %></h2>
+    <p class="bold"><%= submission.category.award.name %> <%= submission.category.code %>: <%= submission.category.name %></p>
+    <p>Submitted By: <%= submission.user.first_name %> <%= submission.user.last_name %></p>
+    <p>Uploaded Documents/Links (click image/link to edit/view):</p>
+    <% if submission.category.submission_file_type == "URL Link Only" || submission.category.submission_file_type == "Video Only" %>
+      <%= link_to 'Submission Link', submission_submission_detail_path(submission_id: submission.id, id: submission_detail.id) %>
+    <% else %>
+      <% submission.submission_details.each do |submission_detail| %>
+        <%= link_to image_tag(submission_detail.attachment.url(:thumb)), submission_submission_detail_path(submission_id: submission.id, id: submission_detail.id) %>
+      <% end %>
     <% end %>
-  </tbody>
-</table>
+    <p><%= link_to 'Edit Submission', edit_submission_path(submission) %> | <%= link_to 'Delete Submission', submission, method: :delete, data: { confirm: 'Are you sure?' } %> | <%= link_to 'Add Digital File', new_submission_submission_detail_path(submission) %></p>
+<% end %>
 
-<br>
 
 </div>
