--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New submission</h1>
+<div class="container">
+	
+	<h1>New Submission</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', submissions_path %>
+<p><%= link_to 'Back to My Submissions', submissions_path %></p>
+
+</div>
