--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -17,5 +17,11 @@
   
   .icons {
     width: 150px;
+    margin-right: 50px;
+    margin-top: 5px;
+  }
+    
+  .btn-primary {
+    margin-top: 5px;
   }
 }
