--- a/app/assets/stylesheets/text.css.scss
+++ b/app/assets/stylesheets/text.css.scss
@@ -59,3 +59,19 @@ p {
   font-weight: bold;
   color: $theme-color3;
 }
+
+.submissionheading {
+  background-color: $theme-color5;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  border-radius:20px;
+  margin-top: 30px;
+  border: none;
+  
+  h2 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+}
