--- a/app/views/submission_details/_form.html.erb
+++ b/app/views/submission_details/_form.html.erb
@@ -33,7 +33,8 @@
     </div>
   <% end %><br/>
   <p class="bold ">Note: if you are submitting multiple documents for one submission, please submit them in the order you want the judges to view them.</p>
+  <p class="bold">When you hit "Submit" please do not hit "Submit" again. Page may take some time to process the upload.</p>
   <div class="actions">
-    <p><%= f.submit "Upload New Document/Link" %></p>
+    <p><%= f.submit "Submit" %></p>
   </div>
 <% end %>
