--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -1,30 +1,52 @@
+<%= javascript_include_tag "jquery.bxslider.min.js" %>
+
+<script>$(document).ready(function(){
+  $('.slider').bxSlider({
+    slideWidth: 200,
+    minSlides: 2,
+    maxSlides: 10,
+    slideMargin: 10,
+    slideHeight: 200
+  });
+});</script>
+
 <div class="container">
 	
 <h1>My Submissions</h1>
 
-<p><%= link_to 'Create a New Submission', new_submission_path, class: "btn btn-default", role: "button" %></p>
-
 <% current_user.user_organizations.each do |user_organization| %>
   <% if user_organization.organization.fair == true %>
 	<% if user_organization.organization.submission_division != '' %>
-		<p class="bold"><span class="italic"><%= user_organization.organization.name %></span> has updated its fair dates/attendance for the <%= Time.now.year %> contest. Its dates are <%= user_organization.organization.organization_details.order('created_at DESC').first.fair_start_date.to_formatted_s(:long)  %> - <%= user_organization.organization.organization_details.order('created_at DESC').first.fair_end_date.to_formatted_s(:long)  %> and its attendance is <%= user_organization.organization.organization_details.order('created_at DESC').first.total_attendance %>, putting it under Division <%= user_organization.organization.submission_division %> for this year's contest. <%= link_to 'Edit these dates/attendance', edit_organization_detail_path(user_organization.organization.organization_details.order('created_at DESC').first) %></p>
-	 <% else %><p class="important">Total attendance/fair dates for the <%= user_organization.organization.name %> has not been inputted for the <%= Time.now.year %> contest. <%= link_to 'Add fair dates/attendance now.', new_organization_detail_path %></p><% end %>
+	  <p><%= link_to 'Create a New Submission', new_submission_path, class: "btn btn-default", role: "button" %></p>
+	  <p class="bold"><span class="italic"><%= user_organization.organization.name %></span> has updated its fair dates/attendance for the <%= Time.now.year %> contest. Its dates are <%= user_organization.organization.organization_details.order('created_at DESC').first.fair_start_date.to_formatted_s(:long)  %> - <%= user_organization.organization.organization_details.order('created_at DESC').first.fair_end_date.to_formatted_s(:long)  %> and its attendance is <%= user_organization.organization.organization_details.order('created_at DESC').first.total_attendance %>, putting it under Division <%= user_organization.organization.submission_division %> for this year's contest. <%= link_to 'Edit these dates/attendance', edit_organization_detail_path(user_organization.organization.organization_details.order('created_at DESC').first) %></p>
+	 <% else %>
+	   <p class="important">Total attendance/fair dates for the <%= user_organization.organization.name %> has not been inputted for the <%= Time.now.year %> contest. <%= link_to 'Add fair dates/attendance now.', new_organization_detail_path %></p>
+     <% end %>
   <% end %>
 <% end %>
 
-<% current_user.submissions.each do |submission| %>
-    <h2><%= submission.contest_year %>: <%= submission.organization.name %></h2>
-    <p class="bold"><%= submission.category.award.name %> <%= submission.category.code %>: <%= submission.category.name %></p>
-    <p>Submitted By: <%= submission.user.first_name %> <%= submission.user.last_name %></p>
-    <p>Uploaded Documents/Links (click image/link to edit/view):</p>
-    <% if submission.category.submission_file_type == "URL Link Only" || submission.category.submission_file_type == "Video Only" %>
-      <%= link_to 'Submission Link', submission_submission_detail_path(submission_id: submission.id, id: submission_detail.id) %>
-    <% else %>
+<% current_user.submissions.group([:contest_year, :organization_id]).each do |contest| %>
+  <div class="submissionheading"><h2><%= contest.contest_year %>: <%= contest.organization.name %></h2></div>
+  <% current_user.submissions.in_groups_of(3, false).each do |group| %>
+    <div class="row" style="display: block; height: 100%%;">
+    <% group.each do |submission| %>
+      <div class="col-md-4">
+      <p class="bold"><%= submission.category.award.name %> <%= submission.category.code %>: <%= submission.category.name %></p>
+      <p>Submitted By: <%= submission.user.first_name %> <%= submission.user.last_name %></p>
+      <p>Uploaded Documents/Links (click image/link to edit/view):</p>
+      <p><% if submission.submission_details.count > 1 %><div class="slider"><% end %>
       <% submission.submission_details.each do |submission_detail| %>
-        <%= link_to image_tag(submission_detail.attachment.url(:thumb)), submission_submission_detail_path(submission_id: submission.id, id: submission_detail.id) %>
-      <% end %>
+        <% if submission.category.submission_file_type == "URL Link Only" || submission.category.submission_file_type == "Video Only" %>
+          <%= link_to 'Submission Link', submission_submission_detail_path(submission_id: submission.id, id: submission_detail.id) %>
+        <% else %>
+          <div class="slide"><%= link_to image_tag(submission_detail.attachment.url(:thumb)), submission_submission_detail_path(submission_id: submission.id, id: submission_detail.id) %></div>
+        <% end %>
+      <% end %><% if submission.submission_details.count > 1 %></div><% end %></p>
+      <p><%= link_to 'Add Digital File', new_submission_submission_detail_path(submission) %> | <%= link_to 'Delete Submission', submission, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+      </div>
     <% end %>
-    <p><%= link_to 'Edit Submission', edit_submission_path(submission) %> | <%= link_to 'Delete Submission', submission, method: :delete, data: { confirm: 'Are you sure?' } %> | <%= link_to 'Add Digital File', new_submission_submission_detail_path(submission) %></p>
+  </div>
+  <% end %>
 <% end %>
 
 
