--- a/app/views/scores/edit.html.erb
+++ b/app/views/scores/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing score</h1>
+<div class="container">
+
+<h1>Editing Score</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @score %> |
-<%= link_to 'Back', scores_path %>
+<p><%= link_to 'Back', scores_path %></p>
+
+</div>
