--- a/app/views/scores/new.html.erb
+++ b/app/views/scores/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New score</h1>
+<div class="container">
+
+<h1>New Score</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', scores_path %>
+<p><%= link_to 'Back', scores_path %></p>
+
+</div>
